<resources>
    <string name="nemc1"> Jedáleň Němcovej 1</string>
    <string name="j7"> Jedáleň Jedlíkova 7</string>
    <string name="bistroUr2"> Bistro Urbánkova 2</string>
    <string name="bistroN9"> Bistro ZP, Němcovej 9</string>
    <string name="bistroN32"> Bistro Němcovej 32</string>
    <string name="vysokosk4"> Jedáleň Vysokoškolská 4</string>
    <string name="UVP"> UVP Technikom, Němcovej 5</string>
    <string name="bud31Presov"> Jedáleň Budovateľská 31, Prešov</string>
    <string name="pizzaJ7"> Pizzéria Forte Jedlíkova 7</string>
    <string name="libresso"> Libresso, Němcovej 7</string>
    <string name="chooseCanteen"> Vyberte si jedáleň</string>
    <string name="full_name">Johny Ive</string>
    <string name="email">Email</string>
    <string name="user_email">example@student.tuke.sk</string>
    <string name="phone">Phone</string>
    <string name="user_phone">+421987654321</string>
    <string name="room">Room</string>
    <string name="balance_button">Balance</string>
    <string name="amount">3.07 €</string>
    <string name="booking">História objednávok</string>
    <string name="room_num">Jedlikova 5 : 001A</string>
    <string name="kcalString">Obsah kalórií v 100 gramoch: </string>
    <string name="btn_add">Objednat</string>
    <string name="app_name">TUKE Jedalne</string>
    <string name="btn_register">Zaregistrovat sa</string>
    <string name="btn_login">Prihlasit sa</string>

</resources>